[tool.poetry]
name = "datasources"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
mongo = "^0.2.0"
bson = "^0.5.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
pytest-asyncio = "^0.14.0"
docker = "^4.2.2"
motor = { version = "*", extras = ["mongo"] }
bson = { version = "*", extras = ["mongo"] }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
